# FraudDetection

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
notebooks/: eda.ipynb  explainability.ipynb  modeling.ipynb
src/: data_cleaner.py  data_loader.py  evaluation.py  feature_engineer.py  models.py  preprocessing_pipelines.py
tests/: test_data_processing.py
