[project]
name = "fraud_detection_system"
version = "0.1.0"
description = "An advanced fraud detection system for e-commerce and credit card transactions."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pandas",
    "numpy",
    "scikit-learn",
    "matplotlib",
    "seaborn",
    "lightgbm",
    "imbalanced-learn",
    "shap",
    "pytest",
    "nbconvert"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"] # Tells setuptools to look for packages in the 'src' directory
